2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Use string.Join instead of custom method.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Removed source editor
	  dependency.

2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Improve error handling. Should fix "Bug
	  359567 - MonoDevelop crashes when creating/opening C++ Console Project".

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Update MD version.

2008-01-22  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Removed useless code.

2008-01-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Cache tags into a hash table and see if they
	  had been previously cached before looking for them again.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/StaticLibraryCProject.xpt.xml,
	  templates/StaticLibraryCppProject.xpt.xml,
	  templates/EmptyCProject.xpt.xml, templates/EmptyCSourceFile.xft.xml,
	  templates/EmptyCppProject.xpt.xml, templates/EmptyCppSourceFile.xft.xml,
	  templates/ConsoleCProject.xpt.xml, templates/ConsoleCppProject.xpt.xml,
	  templates/EmptyCHeaderFile.xft.xml,
	  templates/EmptyCppHeaderFile.xft.xml,
	  templates/SharedLibraryCProject.xpt.xml,
	  templates/SharedLibraryCppProject.xpt.xml: Make template categories
	  translatable.

2008-01-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Only lock the parsingJobs queue object.

2008-01-11  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: When searching for a tag instead of doing a
	  linear search do a binary search (ctags output sorted tag files).
	  Greatly improves parsing speed. Also removed some unused methods.

2008-01-08  Marcos David Marín Amador <MarcosMarin@gmail.com> 
